@startuml
enum GateAnimStates {
    Open= 0,
    Closed= 1,
}
class ShopGateController {
    + {static} <<readonly>> State : int
    Start() : void
    + CloseShop() : void
    + OpenShop() : void
}
MonoBehaviour <|-- ShopGateController
ShopGateController --> "_animator" Animator
ShopGateController --> "animState" GateAnimStates
@enduml
